Reset button update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <br>
   <div>Random color is:</div>
   <br>
-  <button>Generate Color</button>
+  <button id="generate">Generate Color</button>
+  <button id="reset">Reset Color</button>
 
   <script src="script.js"></script>
 </body>
